--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE"
+    <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <title></title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> CACHORROS DE GRANDE PORTE </h1>
