--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         
     </ul>
 
+    <h2> CURIOSIDADES </h2>
+    <a href="https://apaixonadosporquatropatas.com.br/top-10-curiosidades-sobre-caes/" target="_blank"> Acesse para mais curiosidades!</a>
+
     <h2> PARA CONHECER MAIS RAÇAS DE GRANDE PORTE</h2>
     <a href="https://www.selecoes.com.br/pets/saiba-as-racas-de-cachorro-grande-mais-populares/" target="_blank">Acesse este site para conhecer sobre outras raças.</a>
 
