--- a/interno.html
+++ b/interno.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>título 1</h1>
-    <p class="impar"></p>
-    <p class="par"></p>
-    <p class="impar"></p>
-    <p class="par"></p>
+    <p class="impar">Impressão digital no focinho - O focinho de um cachorro esconde muita curiosidade. Além das milhões de células sensoriais capazes de captar aromas a grandes distâncias, o nariz de um cão também é sua identidade.</p>
+    <p class="par">Cachorro transpira pelas patinhas - As "almofadinhas" regulam a temperatura corporal dos pets. Isso porque as glândulas sudoríparas dos cachorros ficam localizadas nas patinhas. Ou seja, é através das patas que os cães transpiram.</p>
+    <p class="impar">O olfato do cão é mil vezes mais sensível que o dos seres humanos - </p>
+    <p class="par">Os cães têm cerca de 100 expressões faciais - </p>
 </body>
 </html>
