--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
     </ul>
 
     <h2> CURIOSIDADES </h2>
-    <a href="interno.html"</a>
+    <a href="interno.html">Saiba mais sobre seu amigo de 4 patas!</a>
 
     <h2> PARA CONHECER MAIS RAÇAS DE GRANDE PORTE</h2>
-    <a href="https://www.selecoes.com.br/pets/saiba-as-racas-de-cachorro-grande-mais-populares/" target="_blank">Acesse este site para conhecer sobre outras raças.</a>
+    <a href="https://www.selecoes.com.br/pets/saiba-as-racas-de-cachorro-grande-mais-populares/" target="_blank">Acesse este site para conhecer sobre outras raças!</a>
 
     <h2> PARA BAIXAR ESSE CONTEÚDO EM PDF</h2>
     <a href="Cachorros de Grande Porte.pdf" target="_blank"  download="COINI.pdf" type="aplication/pdf">
-        Baixe aqui seu PDF.
+        Baixe aqui seu PDF!
     </a>
 
         <h2> PARA ACESSAR TODOS OS ARQUIVOS</h2>
-        <a href="https://github.com/mariamramos/site-2024-" target="_blank">Todos os arquivos deste link.</a>
+        <a href="https://github.com/mariamramos/site-2024-" target="_blank">Todos os arquivos deste link!</a>
 
     </a>  
     
