--- a/interno.html
+++ b/interno.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>título 1</h1>
-    <p class="impar">Impressão digital no focinho - O focinho de um cachorro esconde muita curiosidade. Além das milhões de células sensoriais capazes de captar aromas a grandes distâncias, o nariz de um cão também é sua identidade.</p>
-    <p class="par">Cachorro transpira pelas patinhas - As "almofadinhas" regulam a temperatura corporal dos pets. Isso porque as glândulas sudoríparas dos cachorros ficam localizadas nas patinhas. Ou seja, é através das patas que os cães transpiram.</p>
-    <p class="impar">O olfato do cão é mil vezes mais sensível que o dos seres humanos - </p>
-    <p class="par">Os cães têm cerca de 100 expressões faciais - </p>
+    <h1>CURIOSIDADES</h1>
+    <p class="impar">Impressão digital no focinho: O focinho de um cachorro esconde muita curiosidade. Além das milhões de células sensoriais capazes de captar aromas a grandes distâncias, o nariz de um cão também é sua identidade.</p>
+    <p class="par">Cachorro transpira pelas patinhas: As "almofadinhas" regulam a temperatura corporal dos pets. Isso porque as glândulas sudoríparas dos cachorros ficam localizadas nas patinhas. Ou seja, é através das patas que os cães transpiram.</p>
+    <p class="impar">O olfato do cão é mil vezes mais sensível que o dos seres humanos: Isso acontece porque o bichinho tem elementos especializados para essa finalidade e a área do cérebro que é a responsável por determinar a sensibilidade ao cheiro possui quarenta vezes mais células que a dos seres humanos. O córtex olfativo do cão, que processa as informações de cheiro, ocupa 12,5% da massa total de seu cérebro, enquanto nas pessoas é ocupa menos de 1% .</p>
+    <p class="par">Os cães têm cerca de 100 expressões faciais: Acontece que os cães tem cerca de 100 expressões faciais. A maior parte delas é devido ao animal mexer as orelhas e as sobrancelhas. </p>
 </body>
 </html>
